progress fitur login

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/oktaavianus/PerPro#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "sequelize": "^6.16.2"
